hphp/hack/test/typecheck/xhp_direct_constructor_check.php
<?hh

class :c {
  public function __construct(int $i) {}
}

function f(): void {
  new :c('Hi');
}
